image resized using viewport vw
- images resized using image viewport %s (vw)
- speeds set to be different for each scroller
- fixed class tags for scroller images
- adjusted all link fonts to be teal

--- a/css/app_scroller.css
+++ b/css/app_scroller.css
@@ -49,7 +49,7 @@
 }
 
 /* img sizing inside of scroller */
-.img_scroller {
-    width: 39em;
-    height: 21em;
+.img-scroller {
+    width: 39vw;
+    height: 21vw;
 }
