--- a/css/app_scroller.css
+++ b/css/app_scroller.css
@@ -50,6 +50,6 @@
 
 /* img sizing inside of scroller */
 .img-scroller {
-    width: 39vw;
-    height: 21vw;
+    width: 39em;
+    height: 21em;
 }
